# rong

./: Cargo.toml  README.md  build.ps1
.github/workflows/: build.yml  build_release.yml  client_test.yml  release.yaml  server_test.yml
mock-client/: Cargo.toml
mock-client/src/: main.rs
pong-client/: Cargo.toml
pong-client/src/: main.rs
pong-mock-client/: Cargo.toml
pong-mock-client/src/: main.rs
pong-server/: Cargo.toml
pong-server/src/: ball.rs  game.rs  main.rs  player.rs
rong-client/: Cargo.toml
rong-client/src/: ball.rs  constants.rs  game.rs  main.rs  opponent.rs  pixel_text.rs  player.rs  server.rs  title_ball.rs  title_text.rs
rong-client/src/game/: ball.rs  mod.rs  opponent.rs  player.rs  state.rs
rong-client/src/network/: server.rs
rong-client/src/ui/: mod.rs  pixel_text.rs  title_ball.rs  title_text.rs
rong-server/: Cargo.toml
rong-server/src/: ball.rs  error.rs  game.rs  game_server.rs  lib.rs  main.rs  players.rs
rong-server/src/game/: ball.rs  mod.rs  state.rs
rong-server/src/game/player/: mod.rs  player.rs  player_manager.rs
rong-server/src/matchmaking/: mod.rs  queue.rs
rong-server/src/network/: connection.rs  mod.rs  packet_handler.rs
rong-server/src/network/client_handler/: connection.rs  mod.rs
rong-server/tests/: integration_tests.rs
rong-shared/: Cargo.toml  README.md
rong-shared/src/: error.rs  model.rs
rong-shared/src/model/: mod.rs
rong-shared/src/model/client/: mod.rs
rong-shared/src/model/server/: mod.rs
rong-shared/src/model/shared/: game_update_data.rs  mod.rs  network_packet.rs  position_data.rs  score_data.rs
tests/: integration_tests.rs
