[package]
name = "rong-main-package"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "mock-client",
    "rong-client",
    "rong-server",
    "rong-shared",
]

[[test]]
name = "integration"
path = "tests/integration_tests.rs"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
bincode = "1.3"
rong-shared = { path = "./rong-shared" }
rong-server = { path = "./rong-server" }