[package]
name = "rong"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
crossterm = "0.27.0"
macroquad = {version = "0.4.8", features = ["audio"]}
serde = { version = "1.0.209", features = ["derive"] }
rong-shared = { path = "../rong-shared" }
tokio = { version = "1.28", features = ["full"] }
