[package]
name = "rong-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "rong_server"
path = "src/lib.rs"

[[bin]]
name = "rong_server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
futures = "0.3"
rand = "0.8.5"
rong-shared = { path = "../rong-shared" }
bincode = "1.3.3"
serde = { version = "1.0.209", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
